# smart_touhou_sorter

./: .gitignore  Cargo.toml
engine/: Cargo.toml
engine/src/: lib.rs
scripts/: convert.js
src/: main.rs
testbed/: Cargo.toml
testbed/src/: main.rs
web/: index.html  package.json  vite.config.dev.ts  vite.config.ts
web-engine/: Cargo.toml
web-engine/src/: lib.rs
web/src/: main.ts
