[package]
name = "smart_touhou_sorter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1.1.5"
jiff = { version = "0.2", features = ["serde"] }
ordered-float = { version = "5", features = ["serde"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }

[dev-dependencies]
# Used in UTs since we need to explicitly seed an RNG so test results are reproducible
rand_chacha = "0.9"
