[workspace]
resolver = "3"
members = ["engine", "testbed"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
jiff = { version = "0.2", features = ["serde"] }
ordered-float = { version = "5", features = ["serde"] }
rand = "0.9"
rand_chacha = "0.9" # Used in UTs for a seeded RNG
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }