[workspace]
members = [
    "engine",
    "testbed",
    "web-engine",
]
resolver = "3"

[profile.release]
opt-level = "s"

[workspace.dependencies]
anyhow = "1"
flate2 = "1"
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand = "0.9"
rand_chacha = "0.9"
serde_json = "1"

[workspace.dependencies.clap]
version = "4"
features = ["derive"]

[workspace.dependencies.jiff]
version = "0.2"
features = ["serde"]

[workspace.dependencies.ordered-float]
version = "5"
features = ["serde"]

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.smallvec]
version = "1"
features = ["serde"]
