[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { workspace = true, optional = true }
jiff = { workspace = true }
ordered-float = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
rand_chacha = { workspace = true }

[features]
wasm = ["dep:getrandom", "getrandom/wasm_js"]